i18next WIP: auto list of available languages, language change WIP, fixes, ...

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -10,6 +10,12 @@
     "login": "Login",
     "password": "Password"
   },
+  "languages": {
+    "en": "English",
+    "en-US": "English (US)",
+    "fr": "French",
+    "fr-FR": "French (France)"
+  },
   "message": {
     "login_failed": "Login failed."
   },
